Add store, services, test and updates for interfaces

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,14 +20,16 @@
       "vite-plugin-pwa/client",
       "vite-plugin-svgr/client",
       "node",
+      "jest",
+      "@testing-library/jest-dom",
     ],
     "paths": {
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
+      "@store/*": ["src/store/*"],
       "@theme/*": ["src/theme/*"],
       "@assets/*": ["src/assets/*"],
       "@utils/*": ["src/utils/*"],
-      "@graphql/*": ["graphql/*"],
       "@common/*": ["common/*"],
     },
   },
