Add debounce for search input + move component utils into hooks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
     "react/display-name": "off",
     "css-modules/no-unused-class": 0,
     "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "simple-import-sort/exports": "error",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-uses-react": "off"
   }
 }
