--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/react": "14.1.0",
     "@testing-library/user-event": "14.5.1",
     "@types/jest": "29.5.8",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.14",
@@ -66,6 +67,7 @@
     "@mui/material": "5.14.17",
     "@mui/system": "5.14.17",
     "dotenv": "16.3.1",
+    "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "6.1.0",
